--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "About"
       href: Proposal.html
+    - text: "Regional Analyze"
+      href: Regional.html
     - icon: fa-github fa-lg
       href: https://github.com/ShiyingWu-Angel/P8105_final_Project
 output:
