--- a/_site.yml
+++ b/_site.yml
@@ -9,6 +9,8 @@ navbar:
       href: Regional.html
     - text: "Rating Analyze"
       href: Stars.html
+      text: "Model Building"
+      href: Model-building.html
     - text: "Get your customized restaurant"
       href: https://yt4617.shinyapps.io/shiny_dashboard_template/
     - icon: fa-github fa-lg
